--- a/home.html
+++ b/home.html
@@ -584,7 +584,7 @@ footer .foot_bo p {
         <div class="header-container">
             <div class="header">
                 <div class="logo">
-                    <img src="https://roche-ec.cyou/static/home/img/dhl/0033.png">
+                    <img src="https://cdn.cookielaw.org/logos/d83b6e8f-2787-46e5-b85f-ad52b3a0acb6/3b086a3a-3db1-485d-85e9-83b103a2dc33/4206ae1e-38f5-403f-a211-c14b7a71677e/Roche_Logo_800px_Blue_RGB_Roche_Logo_RGB_(1).png">
                 </div>
                 <div class="join-button">
 <marquee>
