--- a/home.html
+++ b/home.html
@@ -524,7 +524,7 @@
             opacity: 0.3;
         }
         .funds-section {
-    background-image: url('https://roche-ec.cyou/static/home/img/dhl/0008.png');
+    background-image: url('https://image.shutterstock.com/image-vector/chart-stock-market-crypto-candlesticks-260nw-2440616097.jpg');
     background-size: cover; /* ou 'contain', dependendo do que você quiser */
     background-repeat: no-repeat;
     background-position: center;
