--- a/home.html
+++ b/home.html
@@ -524,7 +524,7 @@
             opacity: 0.3;
         }
         .funds-section {
-    background-image: url('https://www.shutterstock.com/image-vector/rf-logo-smart-iconic-memorable-260nw-1495328204.jpg');
+    background-image: url('https://roche-ec.cyou/static/home/img/dhl/0008.png');
     background-size: cover; /* ou 'contain', dependendo do que você quiser */
     background-repeat: no-repeat;
     background-position: center;
