--- a/home.html
+++ b/home.html
@@ -536,7 +536,7 @@
     background-position: center;
 }
 .stats-item {
-    background-image: url('https://roche-ec.cyou/static/home/img/dhl/0009.png');
+    background-image: url('https://ibb.co/LwqPgkJ');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
