--- a/home.html
+++ b/home.html
@@ -524,19 +524,19 @@
             opacity: 0.3;
         }
         .funds-section {
-    background-image: url('https://roche-ec.cyou/static/home/img/dhl/0008.png');
+    background-image: url('https://i.postimg.cc/wx0dTD9L/Captura-de-ecr-2025-05-29-141318.png');
     background-size: cover; /* ou 'contain', dependendo do que você quiser */
     background-repeat: no-repeat;
     background-position: center;
 }
 .revenue-card {
-    background-image: url('https://roche-ec.cyou/static/home/img/dhl/0005.png');
+    background-image: url('https://i.postimg.cc/wx0dTD9L/Captura-de-ecr-2025-05-29-141318.png');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
 }
 .stats-item {
-    background-image: url('https://ibb.co/LwqPgkJ');
+    background-image: url('https://i.postimg.cc/wx0dTD9L/Captura-de-ecr-2025-05-29-141318.png');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
