--- a/home.html
+++ b/home.html
@@ -616,7 +616,7 @@ footer .foot_bo p {
             </div>
 
             <div class="activities-card" onclick="window.location.href=''">
-                <img src="https://roche-ec.cyou/static/home/img/dhl/0002.jpg">
+                <img src="https://i.postimg.cc/sXWqPZWf/Captura-de-ecr-2025-05-29-142546.png">
             </div>
 
             <div class="stats-container">
