--- a/home.html
+++ b/home.html
@@ -627,8 +627,8 @@ footer .foot_bo p {
                 <div class="product-card" onclick="window.location.href='meuproduto.html'">
                     <div class="card-label">Meu produto</div>
                     <div class="product-icon">
-                        <img class="product-icon-img1" src="https://roche-ec.cyou/static/home/img/dhl/0007.png">
-                        <img class="product-icon-img2" src="https://roche-ec.cyou/static/home/img/dhl/0006.png">
+                        <img class="product-icon-img1" src="https://i.postimg.cc/N0djhSC2/Captura-de-ecr-2025-05-29-143624.png">
+                        <img class="product-icon-img2" src="">
                     </div>
                 </div>
             </div>
