--- a/home.html
+++ b/home.html
@@ -627,8 +627,8 @@ footer .foot_bo p {
                 <div class="product-card" onclick="window.location.href='meuproduto.html'">
                     <div class="card-label">Meu produto</div>
                     <div class="product-icon">
-                        <img class="product-icon-img1" src="https://i.postimg.cc/N0djhSC2/Captura-de-ecr-2025-05-29-143624.png">
-                        <img class="product-icon-img2" src="">
+                        <img class="product-icon-img1" src="https://i.postimg.cc/GpxqbJvy/Captura-de-ecr-2025-05-29-143624.png">
+                        <img class="product-icon-img2" src="https://i.postimg.cc/bJXqTcmQ/Captura-de-ecr-2025-05-29-143624.png
                     </div>
                 </div>
             </div>
