--- a/home.html
+++ b/home.html
@@ -628,7 +628,7 @@ footer .foot_bo p {
                     <div class="card-label">Meu produto</div>
                     <div class="product-icon">
                         <img class="product-icon-img1" src="https://i.postimg.cc/GpxqbJvy/Captura-de-ecr-2025-05-29-143624.png">
-                        <img class="product-icon-img2" src="https://i.postimg.cc/bJXqTcmQ/Captura-de-ecr-2025-05-29-143624.png
+                        <img class="product-icon-img2" src="https://i.postimg.cc/bJXqTcmQ/Captura-de-ecr-2025-05-29-143624.png">
                     </div>
                 </div>
             </div>
