--- a/home.html
+++ b/home.html
@@ -657,12 +657,12 @@ footer .foot_bo p {
                 <div class="stats-item" onclick="window.location.href='checkin.html'">
                     <div class="stats-icon"><i class="fas fa-wallet"></i></div>
                     <div class="stats-label">Registrar-se</div>
-                    <div class="stats-img"><img src="https://roche-ec.cyou/static/home/img/dhl/0034.png"></div>
+                    <div class="stats-img"><img src="https://img.icons8.com/?size=80&id=UcBk018Bionc&format=gif"></div>
                 </div>
                 <div class="stats-item" onclick="window.location.href='atendimento.html'">
                     <div class="stats-icon"><i class="fas fa-wallet"></i></div>
                     <div class="stats-label">Atendimento ao cliente</div>
-                    <div class="stats-img"><img src="https://roche-ec.cyou/static/home/img/dhl/0026.png"></div>
+                    <div class="stats-img"><img src="https://img.icons8.com/?size=96&id=EKG3Xm9Ae3rY&format=gif"></div>
                 </div>
 
             </div>
