--- a/registro.html
+++ b/registro.html
@@ -348,31 +348,59 @@
     
     <footer>
         <div class="foot_bo">
-            <a href="home.html">
-                <img src="https://roche-ec.cyou/static/home/img/dhl/0010.png" />
-                <p class="xz">Início</p>
-            </a>
-        </div>
+        <a href="home.html">
+            <img src="https://img.icons8.com/?size=60&id=59809&format=png" />
+            <p class="xz">Início</p>
+        </a>
+    </div>
+            <div class="foot_bo">
+        <a href="produto.html">
+            <img src="https://img.icons8.com/?size=60&id=59867&format=png" />
+            <p>Ganhos</p>
+        </a>
+    </div>
+        <!--     <div class="foot_bo">
+        <a href="https://roche-ec.cyou/game/index">
+            <img src="/static/home/img/ico_zp.png" class="game1" />
+            <p>Jogo</p>
+        </a>
+    </div>
+     -->
+    <!--     <div class="foot_bo">
+        <a href="https://roche-ec.cyou/user/service">
+            <img src="/static/home/img/custemService2.png" class="" />
+            <p>atendimento ao Cliente</p>
+        </a>
+    </div>
+     -->
+    <!--     <div class="foot_bo">
+        <a href="https://roche-ec.cyou/treasure/index">
+            <img src="/static/home/img/p20.png" class="game1" />
+            <p>Tesouro</p>
+        </a>
+    </div>
+     -->
         <div class="foot_bo">
-            <a href="produto.html">
-                <img src="https://roche-ec.cyou/static/home/img/dhl/0012.png" />
-                <p>Ganhos</p>
-            </a>
-        </div>
+        <a href="equipe.html">
+            <img src="https://img.icons8.com/?size=60&id=59858&format=png" />
+            <p>Team</p>
+        </a>
+    </div>
+        <!-- -->
+    <!--    <div class="foot_bo">-->
+    <!--        <a href="https://roche-ec.cyou/redpacket/index">-->
+    <!--            <img src="/static/home/img/hb3.png"/>-->
+    <!--            <p>Reward</p>-->
+    <!--        </a>-->
+    <!--    </div>-->
+    <!-- -->
         <div class="foot_bo">
-            <a href="equipe.html">
-                <img src="https://roche-ec.cyou/static/home/img/dhl/0014.png" />
-                <p>Team</p>
-            </a>
-        </div>
-        <div class="foot_bo">
-            <a href="perfil.html">
-                <img src="https://roche-ec.cyou/static/home/img/dhl/0016.png" />
-                <p>Meu</p>
-            </a>
-        </div>
+        <a href="perfil.html">
+            <img src="https://img.icons8.com/?size=60&id=60968&format=png" />
+            <p>Meu</p>
+        </a>
+    </div>
     </footer>
-
     <script>
         document.addEventListener('DOMContentLoaded', function() {
             // Verificar se o usuário está logado
