--- a/checkin.html
+++ b/checkin.html
@@ -391,7 +391,7 @@
         <div class="page-content">
             <div class="checkin-img">
                 <div class="checkin-img-xin">
-                    <img src="https://roche-ec.cyou/static/home/img/dhl/0035.png" alt="">
+                    <img src="https://i.postimg.cc/909p3T24/Captura-de-ecr-2025-05-29-143624.png" alt="">
                 </div>
             </div>
 
@@ -408,7 +408,7 @@
             <div class="checkin-profit-container">
                 <div class="checkin-profit-border-left">
                     <div class="checkin-profit-img">
-                        <img src="https://roche-ec.cyou/static/home/img/dhl/0036.png" alt="">
+                        <img src="https://i.postimg.cc/909p3T24/Captura-de-ecr-2025-05-29-143624.png" alt="">
                     </div>
                     <div class="checkin-profit-content">
                         <p>AOA 0.00</p>
@@ -419,7 +419,7 @@
                 </div>
                 <div class="checkin-profit-border-right">
                     <div class="checkin-profit-img">
-                        <img src="https://roche-ec.cyou/static/home/img/dhl/0037.png" alt="">
+                        <img src="https://i.postimg.cc/909p3T24/Captura-de-ecr-2025-05-29-143624.png" alt="">
                     </div>
                     <div class="checkin-profit-content">
                         <p>AOA 0.00</p>
