--- a/produto.html
+++ b/produto.html
@@ -464,13 +464,13 @@ footer .foot_bo p {
 <footer>
         <div class="foot_bo">
         <a href="home.html">
-            <img src="https://roche-ec.cyou/static/home/img/dhl/0010.png" />
+            <img src="https://img.icons8.com/?size=60&id=59809&format=png" />
             <p class="xz">Início</p>
         </a>
     </div>
             <div class="foot_bo">
         <a href="produto.html">
-            <img src="https://roche-ec.cyou/static/home/img/dhl/0012.png" />
+            <img src="https://img.icons8.com/?size=60&id=59867&format=png" />
             <p>Ganhos</p>
         </a>
     </div>
@@ -497,7 +497,7 @@ footer .foot_bo p {
      -->
         <div class="foot_bo">
         <a href="equipe.html">
-            <img src="https://roche-ec.cyou/static/home/img/dhl/0014.png" />
+            <img src="https://img.icons8.com/?size=60&id=59858&format=png" />
             <p>Team</p>
         </a>
     </div>
@@ -511,11 +511,11 @@ footer .foot_bo p {
     <!-- -->
         <div class="foot_bo">
         <a href="perfil.html">
-            <img src="https://roche-ec.cyou/static/home/img/dhl/0016.png" />
+            <img src="https://img.icons8.com/?size=60&id=60968&format=png" />
             <p>Meu</p>
         </a>
     </div>
-    </footer> 
+    </footer>
     </script>
 </body>
 
