--- a/produto.html
+++ b/produto.html
@@ -286,7 +286,7 @@ footer .foot_bo p {
                                                 <div class="product-card" onclick="window.location.href='produto2.html'">
                 <div class="product-info">
                     <div class="product-image">
-                        <img src="https://roche-ec.cyou/uploads/image/20250514/5deb5bc872c4bbfb41efeabd51931059.jpg">
+                        <img src="https://a.storyblok.com/f/173846/1259x492/47db17d04b/header-medicamentos.png">
                     </div>
                     <div class="product-details">
                         <h3 class="product-title">Roche  VIP2</h3>
@@ -317,7 +317,7 @@ footer .foot_bo p {
                                                 <div class="product-card" onclick="window.location.href='produto3.html'">
                 <div class="product-info">
                     <div class="product-image">
-                        <img src="https://roche-ec.cyou/uploads/image/20250514/35ece98ef5f2447559152307a2544a69.jpg">
+                        <img src="https://a.storyblok.com/f/173846/1259x492/47db17d04b/header-medicamentos.png">
                     </div>
                     <div class="product-details">
                         <h3 class="product-title">Roche VIP3</h3>
@@ -358,7 +358,7 @@ footer .foot_bo p {
             <div class="productList">
                 <div class="productItem">
                     <img class="productImg" alt=""
-                        src="/uploads/image/20250514/5deb5bc872c4bbfb41efeabd51931059.jpg">
+                        src="https://a.storyblok.com/f/173846/1259x492/47db17d04b/header-medicamentos.png">
                     <div class="productName">Roche  VIP 1</div>
                     <div class="info-warp">
                         <div class="one">
@@ -388,7 +388,7 @@ footer .foot_bo p {
             <div class="productList">
                 <div class="productItem">
                     <img class="productImg" alt=""
-                        src="/uploads/image/20250514/35ece98ef5f2447559152307a2544a69.jpg">
+                        src="https://a.storyblok.com/f/173846/1259x492/47db17d04b/header-medicamentos.png">
                     <div class="productName">Roche  VIP2</div>
                     <div class="info-warp">
                         <div class="one">
@@ -418,7 +418,7 @@ footer .foot_bo p {
             <div class="productList">
                 <div class="productItem">
                     <img class="productImg" alt=""
-                        src="/uploads/image/20250514/5bba26f370bb70109edb187909a55786.jpg">
+                        src="https://a.storyblok.com/f/173846/1259x492/47db17d04b/header-medicamentos.png">
                     <div class="productName">Roche VIP3</div>
                     <div class="info-warp">
                         <div class="one">
@@ -511,7 +511,7 @@ footer .foot_bo p {
     <!-- -->
         <div class="foot_bo">
         <a href="perfil.html">
-            <img src="https://img.icons8.com/?size=60&id=60968&format=png" />
+            <img src="https://a.storyblok.com/f/173846/1259x492/47db17d04b/header-medicamentos.png" />
             <p>Meu</p>
         </a>
     </div>
