--- a/produto.html
+++ b/produto.html
@@ -255,7 +255,7 @@ footer .foot_bo p {
                                     <div class="product-card" onclick="window.location.href='produto1.html'">
                 <div class="product-info">
                     <div class="product-image">
-                        <img src="https://roche-ec.cyou/uploads/image/20250514/5bba26f370bb70109edb187909a55786.jpg">
+                        <img src="https://a.storyblok.com/f/173846/1259x492/47db17d04b/header-medicamentos.png">
                     </div>
                     <div class="product-details">
                         <h3 class="product-title">Roche  VIP 1</h3>
@@ -352,7 +352,7 @@ footer .foot_bo p {
     <div class="device-container" style="display: none;">
         <div class="device-title">
             <div class="device-title-text">——Lista de Produtos——</div>
-            <p onclick="window.location.href='https://roche-ec.cyou/device/index'">Meus Projetos</p>
+            <p onclick="window.location.href='index.html'">Meus Projetos</p>
         </div>
                 <div class="end-cont">
             <div class="productList">
@@ -511,7 +511,7 @@ footer .foot_bo p {
     <!-- -->
         <div class="foot_bo">
         <a href="perfil.html">
-            <img src="https://a.storyblok.com/f/173846/1259x492/47db17d04b/header-medicamentos.png" />
+            <img src="https://img.icons8.com/?size=60&id=60968&format=png" />
             <p>Meu</p>
         </a>
     </div>
