--- a/produto1.html
+++ b/produto1.html
@@ -360,13 +360,13 @@
   <!-- Imagem superior e botão de voltar -->
   <div class="device-img-container">
     <div class="back-button" onclick="window.history.back()">
-      <img src="https://img.icons8.com/?size=60&id=60636&format=png" alt="">
+      <img src="https://api-wped.onrender.com/user" alt="">
     </div>
     <div class="badge-container">
       <div class="badge">Melhor Vendedor</div>
     </div>
     <div class="device-img">
-      <img src="https://roche-ec.cyou/uploads/image/20250514/5deb5bc872c4bbfb41efeabd51931059.jpg" alt="">
+      <img src="https://a.storyblok.com/f/173846/1259x492/47db17d04b/header-medicamentos.png" alt="">
     </div>
   </div>
 
