--- a/produto2.html
+++ b/produto2.html
@@ -366,7 +366,7 @@
       <div class="badge">Melhor Vendedor</div>
     </div>
     <div class="device-img">
-      <img src="https://roche-ec.cyou/uploads/image/20250514/5deb5bc872c4bbfb41efeabd51931059.jpg" alt="">
+      <img src="https://a.storyblok.com/f/173846/1259x492/47db17d04b/header-medicamentos.png" alt="">
     </div>
   </div>
 
