--- a/produto1.html
+++ b/produto1.html
@@ -360,7 +360,7 @@
   <!-- Imagem superior e botão de voltar -->
   <div class="device-img-container">
     <div class="back-button" onclick="window.history.back()">
-      <img src="https://icons8.com.br/icon/60636/back" alt="">
+      <img src="https://img.icons8.com/?size=100&id=40217&format=png" alt="">
     </div>
     <div class="badge-container">
       <div class="badge">Melhor Vendedor</div>
