--- a/equipe.html
+++ b/equipe.html
@@ -465,30 +465,30 @@
         <div class="team-levels">
             <div class="team-level" onclick="window.location.href='2.html'">
                 <div class="level-icon">
-                    <img src="https://roche-ec.cyou/static/home/img/dhl/0020.png" alt="Equipe 2">
+                    <img src="https://img.icons8.com/?size=96&id=12827&format=png" alt="Equipe 2">
                 </div>
                 <div class="level-info">
-                    <div class="level-name">Equipe 2<img src="https://roche-ec.cyou/static/home/img/dhl/0022.png"></div>
+                    <div class="level-name">Equipe 2<img src="https://img.icons8.com/?size=96&id=12827&format=png"></div>
                     <div class="level-percent">2%</div>
                 </div>
             </div>
 
             <div class="team-level" onclick="window.location.href='1.html'">
                 <div class="level-icon">
-                    <img src="https://roche-ec.cyou/static/home/img/dhl/0019.png" alt="Equipe 1">
+                    <img src="https://img.icons8.com/?size=96&id=12827&format=png" alt="Equipe 1">
                 </div>
                 <div class="level-info">
-                    <div class="level-name">Equipe 1<img src="https://roche-ec.cyou/static/home/img/dhl/0022.png"></div>
+                    <div class="level-name">Equipe 1<img src="https://img.icons8.com/?size=96&id=12827&format=png"></div>
                     <div class="level-percent">20%</div>
                 </div>
             </div>
 
             <div class="team-level" onclick="window.location.href='3.html'">
                 <div class="level-icon">
-                    <img src="https://roche-ec.cyou/static/home/img/dhl/0021.png" alt="Equipe 3">
+                    <img src="https://img.icons8.com/?size=96&id=12827&format=png" alt="Equipe 3">
                 </div>
                 <div class="level-info">
-                    <div class="level-name">Equipe 3<img src="https://roche-ec.cyou/static/home/img/dhl/0022.png"></div>
+                    <div class="level-name">Equipe 3<img src="https://img.icons8.com/?size=96&id=12827&format=png"></div>
                     <div class="level-percent">1%</div>
                 </div>
             </div>
@@ -519,31 +519,60 @@
 
     <div style="height: 70px;"></div>
     
-    <footer>
+<footer>
         <div class="foot_bo">
-            <a href="home.html">
-                <img src="https://roche-ec.cyou/static/home/img/dhl/0010.png" />
-                <p class="xz">Início</p>
-            </a>
-        </div>
+        <a href="home.html">
+            <img src="https://img.icons8.com/?size=60&id=59809&format=png" />
+            <p class="xz">Início</p>
+        </a>
+    </div>
+            <div class="foot_bo">
+        <a href="produto.html">
+            <img src="https://img.icons8.com/?size=60&id=59867&format=png" />
+            <p>Ganhos</p>
+        </a>
+    </div>
+        <!--     <div class="foot_bo">
+        <a href="https://roche-ec.cyou/game/index">
+            <img src="/static/home/img/ico_zp.png" class="game1" />
+            <p>Jogo</p>
+        </a>
+    </div>
+     -->
+    <!--     <div class="foot_bo">
+        <a href="https://roche-ec.cyou/user/service">
+            <img src="/static/home/img/custemService2.png" class="" />
+            <p>atendimento ao Cliente</p>
+        </a>
+    </div>
+     -->
+    <!--     <div class="foot_bo">
+        <a href="https://roche-ec.cyou/treasure/index">
+            <img src="/static/home/img/p20.png" class="game1" />
+            <p>Tesouro</p>
+        </a>
+    </div>
+     -->
         <div class="foot_bo">
-            <a href="produto.html">
-                <img src="https://roche-ec.cyou/static/home/img/dhl/0012.png" />
-                <p>Ganhos</p>
-            </a>
-        </div>
+        <a href="equipe.html">
+            <img src="https://img.icons8.com/?size=60&id=59858&format=png" />
+            <p>Team</p>
+        </a>
+    </div>
+        <!-- -->
+    <!--    <div class="foot_bo">-->
+    <!--        <a href="https://roche-ec.cyou/redpacket/index">-->
+    <!--            <img src="/static/home/img/hb3.png"/>-->
+    <!--            <p>Reward</p>-->
+    <!--        </a>-->
+    <!--    </div>-->
+    <!-- -->
         <div class="foot_bo">
-            <a href="equipe.html">
-                <img src="https://roche-ec.cyou/static/home/img/dhl/0014.png" />
-                <p>Team</p>
-            </a>
-        </div>
-        <div class="foot_bo">
-            <a href="perfil.html">
-                <img src="https://roche-ec.cyou/static/home/img/dhl/0016.png" />
-                <p>Meu</p>
-            </a>
-        </div>
+        <a href="perfil.html">
+            <img src="https://img.icons8.com/?size=60&id=60968&format=png" />
+            <p>Meu</p>
+        </a>
+    </div>
     </footer>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.11/clipboard.min.js"></script>
 
