--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
 
 <body>
     <div class="login_logo">
-        <img src="https://cdn.cookielaw.org/logos/d83b6e8f-2787-46e5-b85f-ad52b3a0acb6/3b086a3a-3db1-485d-85e9-83b103a2dc33/4206ae1e-38f5-403f-a211-c14b7a71677e/Roche_Logo_800px_Blue_RGB_Roche_Logo_RGB_(1).png" />
+        <img src="https://i.postimg.cc/6pMXxKpL/photo-2025-06-02-21-21-47.jpg" />
     </div>
     <div class="login_form">
         <form name="form" method="post" id="form">
