--- a/index.html
+++ b/index.html
@@ -13,205 +13,217 @@
     <link rel="stylesheet" href="/static/home/css/framework7.ios.min.css">
     <link rel="stylesheet" href="/static/home/css/app.css?v=5.8">
     <link rel="stylesheet" href="/static/home/css/iconfont.css">
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            list-style: none;
-            text-decoration: none;
-            box-sizing: border-box;
-        }
+    <style>* {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    text-decoration: none;
+    box-sizing: border-box;
+}
 
-        body {
-            background: linear-gradient(180deg, #ffae00, rgba(255, 215, 0, 0));
-            font-family: Arial, sans-serif;
-            min-height: 100vh;
-            color: #333;
-            margin: 0;
-            overflow: hidden;
-        }
+body {
+    background: linear-gradient(180deg, #8B0000, rgba(0, 0, 0, 0.9));
+    font-family: Arial, sans-serif;
+    min-height: 100vh;
+    color: #f0f0f0;
+    margin: 0;
+    overflow: hidden;
+}
 
-        .login_logo {
-            width: 100%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            padding: 50px 0 30px;
-        }
+.login_logo {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 50px 0 30px;
+}
 
-        .login_logo img {
-            width: 180px;
-            height: auto;
-        }
+.login_logo img {
+    width: 180px;
+    height: auto;
+}
 
-        .login_form {
-            width: 90%;
-            margin: 0 auto;
-            padding: 20px;
-            border-radius: 10px;
-        }
+.login_form {
+    width: 90%;
+    margin: 0 auto;
+    padding: 20px;
+    border-radius: 10px;
+}
 
-        .input-container {
-            margin-bottom: 20px;
-        }
+.input-container {
+    margin-bottom: 20px;
+}
 
-        .input-control {
-            width: 100%;
-            height: 50px;
-            border: 1px solid #ff7e00;
-            border-radius: 10px;
-            position: relative;
-            background: rgb(255, 255, 240);
-            overflow: hidden;
-        }
+.input-control {
+    width: 100%;
+    height: 50px;
+    border: 1px solid #8B0000;
+    border-radius: 10px;
+    position: relative;
+    background: #1a1a1a;
+    overflow: hidden;
+}
 
-        .input-control i {
-            position: absolute;
-            left: 15px;
-            top: 70%;
-            transform: translateY(-50%);
-            color: #ff7e00;
-            font-size: 18px;
-        }
+.input-control i {
+    position: absolute;
+    left: 15px;
+    top: 70%;
+    transform: translateY(-50%);
+    color: #8B0000;
+    font-size: 18px;
+}
 
-        .inputfield {
-            width: 100%;
-            height: 100%;
-            border: none;
-            background: transparent;
-            padding: 0 15px 0 45px;
-            font-size: 16px;
-            color: #333;
-        }
+.inputfield {
+    width: 100%;
+    height: 100%;
+    border: none;
+    background: transparent;
+    padding: 0 15px 0 45px;
+    font-size: 16px;
+    color: #fff;
+}
 
-        .inputfield:focus {
-            outline: none;
-        }
+.inputfield:focus {
+    outline: none;
+}
 
-        .loginfield {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 5px 0;
-        }
+.loginfield {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 5px 0;
+}
 
-        .loginfield div {
-            color: #666 !important;
-            font-size: 14px;
-            display: flex;
-            align-items: center;
-        }
+.loginfield div {
+    color: #ccc !important;
+    font-size: 14px;
+    display: flex;
+    align-items: center;
+}
 
-        .loginfield input[type="checkbox"] {
-            margin-right: 5px;
-        }
+.loginfield input[type="checkbox"] {
+    margin-right: 5px;
+}
 
-        .loginfield a {
-            color: #ff7e00 !important;
-            font-size: 14px;
-            text-decoration: none;
-        }
+.loginfield a {
+    color: #b22222 !important;
+    font-size: 14px;
+    text-decoration: none;
+}
 
-        .center {
-            text-align: center;
-            margin-top: 20px;
-        }
+.center {
+    text-align: center;
+    margin-top: 20px;
+}
 
-        .space-20 {
-            height: 20px;
-        }
+.space-20 {
+    height: 20px;
+}
 
-        .btn_submit_my {
-            display: block;
-            width: 100%;
-            height: 50px;
-            line-height: 50px;
-            background: linear-gradient(90deg, #ff7e00, #ff7e00);
-            border-radius: 25px;
-            text-align: center;
-            color: white;
-            font-size: 18px;
-            font-weight: bold;
-            text-decoration: none;
-            margin: 0 auto;
-            box-shadow: 0 5px 15px rgba(255, 126, 0, 0.3);
-            cursor: pointer;
-            transition: all 0.3s;
-            border: none;
-        }
+.btn_submit_my {
+    display: block;
+    width: 100%;
+    height: 50px;
+    line-height: 50px;
+    background: linear-gradient(90deg, #8B0000, #b22222);
+    border-radius: 25px;
+    text-align: center;
+    color: white;
+    font-size: 18px;
+    font-weight: bold;
+    text-decoration: none;
+    margin: 0 auto;
+    box-shadow: 0 5px 15px rgba(139, 0, 0, 0.3);
+    cursor: pointer;
+    transition: all 0.3s;
+    border: none;
+}
 
-        .btn_submit_my:hover {
-            transform: translateY(-2px);
-            box-shadow: 0 8px 20px rgba(255, 126, 0, 0.4);
-        }
+.btn_submit_my:hover {
+    transform: translateY(-2px);
+    box-shadow: 0 8px 20px rgba(139, 0, 0, 0.4);
+}
 
-        .login_laa {
-            display: block;
-            width: 100%;
-            height: 50px;
-            line-height: 50px;
-            background: rgba(255, 126, 0, 0.1);
-            border: 1px solid #ff7e00;
-            border-radius: 25px;
-            text-align: center;
-            color: #ff7e00;
-            font-size: 18px;
-            font-weight: bold;
-            text-decoration: none;
-            margin: 15px auto 0;
-            transition: all 0.3s;
-        }
+.login_laa {
+    display: block;
+    width: 100%;
+    height: 50px;
+    line-height: 50px;
+    background: rgba(139, 0, 0, 0.1);
+    border: 1px solid #8B0000;
+    border-radius: 25px;
+    text-align: center;
+    color: #8B0000;
+    font-size: 18px;
+    font-weight: bold;
+    text-decoration: none;
+    margin: 15px auto 0;
+    transition: all 0.3s;
+}
 
-        .login_laa:hover {
-            background: rgba(255, 126, 0, 0.2);
-        }
+.login_laa:hover {
+    background: rgba(139, 0, 0, 0.2);
+}
 
-        .toast {
-            visibility: hidden;
-            min-width: 250px;
-            margin-left: -125px;
-            background-color: #333;
-            color: #fff;
-            text-align: center;
-            border-radius: 2px;
-            padding: 16px;
-            position: fixed;
-            z-index: 1;
-            left: 50%;
-            bottom: 30px;
-            font-size: 17px;
-        }
+.toast {
+    visibility: hidden;
+    min-width: 250px;
+    margin-left: -125px;
+    background-color: #333;
+    color: #fff;
+    text-align: center;
+    border-radius: 2px;
+    padding: 16px;
+    position: fixed;
+    z-index: 1;
+    left: 50%;
+    bottom: 30px;
+    font-size: 17px;
+}
 
-        .toast.show {
-            visibility: visible;
-            animation: fadein 0.5s, fadeout 0.5s 2.5s;
-        }
+.toast.show {
+    visibility: visible;
+    animation: fadein 0.5s, fadeout 0.5s 2.5s;
+}
 
-        .toast.error {
-            background-color: #ff4444;
-        }
+.toast.error {
+    background-color: #ff4444;
+}
 
-        .toast.success {
-            background-color: #00C851;
-        }
+.toast.success {
+    background-color: #00C851;
+}
 
-        @keyframes fadein {
-            from {bottom: 0; opacity: 0;}
-            to {bottom: 30px; opacity: 1;}
-        }
+@keyframes fadein {
+    from {
+        bottom: 0;
+        opacity: 0;
+    }
+    to {
+        bottom: 30px;
+        opacity: 1;
+    }
+}
 
-        @keyframes fadeout {
-            from {bottom: 30px; opacity: 1;}
-            to {bottom: 0; opacity: 0;}
-        }
+@keyframes fadeout {
+    from {
+        bottom: 30px;
+        opacity: 1;
+    }
+    to {
+        bottom: 0;
+        opacity: 0;
+    }
+}
 
-        .icon-mobile::after {
-            content: "+244";
-        }
+.icon-mobile::after {
+    content: "+244";
+}
 
-        #mobile {
-            padding-left: 75px;
-        }
+#mobile {
+    padding-left: 75px;
+}
+
     </style>
 </head>
 
